# CourseWork1

./: .env_template  .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml
data/: fast_food_report.json
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
