[project]
name = "coursework1"
version = "0.1.0"
description = ""
authors = [
    {name = "alexandra andr",email = "shura_1986@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.17.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"

[tool.black]
line-length=119
exclude = '''
(
/(
\.eggs
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| dist
)/
)'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
line_length = 119